--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">*****<br />
-										****</a></h2>
+										<h2><a href="#">Data Exploration in SQL<br />
+										Running SQL querris and cretion of Measures</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>****</p>
@@ -170,4 +170,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
