--- a/index.html
+++ b/index.html
@@ -97,22 +97,22 @@
 										<h2><a href="#">Data Exploration in SQL<br />
 										Running SQL querris and cretion of Measures</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/sqi image.jpg" alt="" /></a>
 									<p>****</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">****</a></li>
+										<li><a href="https://1drv.ms/w/c/abd3edf75e1c023c/EZBTuUOJTFZKsF1zXPMfd1gBhQeV0RKmgT-ieIog9WipVw" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										
-										<h2><a href="#">******<br />
-										*****</a></h2>
+										<h2><a href="https://1drv.ms/x/c/abd3edf75e1c023c/EfuSUv8vlN1Kjhwe5my8FUsBl2r1jCkvTldpMiLo4dypoQ">Data Visualisation in Excel<br />
+										Data cleaning; Data modelling; Data Visualization </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>******</p>
+									<a href="https://1drv.ms/x/c/abd3edf75e1c023c/EfuSUv8vlN1Kjhwe5my8FUsBl2r1jCkvTldpMiLo4dypoQ" class="image fit"><img src="images/.jpg" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">******</a></li>
+										<li><a href="https://1drv.ms/x/c/abd3edf75e1c023c/EfuSUv8vlN1Kjhwe5my8FUsBl2r1jCkvTldpMiLo4dypoQ" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -172,3 +172,4 @@
 	</body>
 
 </html>
+
