--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<h2><a href="https://1drv.ms/x/c/abd3edf75e1c023c/EfuSUv8vlN1Kjhwe5my8FUsBl2r1jCkvTldpMiLo4dypoQ">Data Visualisation in Excel<br />
 										Data cleaning; Data modelling; Data Visualization </a></h2>
 									</header>
-									<a href="https://1drv.ms/x/c/abd3edf75e1c023c/EfuSUv8vlN1Kjhwe5my8FUsBl2r1jCkvTldpMiLo4dypoQ" class="image fit"><img src="images/.jpg" alt="" /></a>
+									<a href="https://1drv.ms/x/c/abd3edf75e1c023c/EfuSUv8vlN1Kjhwe5my8FUsBl2r1jCkvTldpMiLo4dypoQ" class="image fit"><img src="images/Bank loan dashboard pic.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="https://1drv.ms/x/c/abd3edf75e1c023c/EfuSUv8vlN1Kjhwe5my8FUsBl2r1jCkvTldpMiLo4dypoQ" class="button">View Project</a></li>
@@ -172,4 +172,5 @@
 	</body>
 
 </html>
+
 
