--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										<h2><a href="#">Data Exploration in SQL<br />
 										Running SQL querris and cretion of Measures</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/sqi image.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/sql image.jpg" alt="" /></a>
 									<p>****</p>
 									<ul class="actions special">
 										<li><a href="https://1drv.ms/w/c/abd3edf75e1c023c/EZBTuUOJTFZKsF1zXPMfd1gBhQeV0RKmgT-ieIog9WipVw" class="button">View Project</a></li>
@@ -172,5 +172,6 @@
 	</body>
 
 </html>
+
 
 
